src/test/deca/context/valid/testField.deca


class A {
    protected int X;
    protected boolean Y;
    protected float Z;
}


{
    A test = new A();
    println("OK");
}
