src/test/deca/context/invalid/unknown_class.deca
//ERROR :3
{
Animal A = new Animal();
}